objects/Main/objects/WSU_Kyou_Options__c.object
<!--
This file is part of WSU_Kyou, a Salesforce native queue for Batch Apex and Scheduled Apex.

Copyright 2013-2014, Wayne State University
License: 3-clause BSD license.  See LICENSE.
-->
<CustomObject>
    <description>Stores the runtime options for perpetuating the Kyou.</description>
    <label>Kyou Options</label>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Protected</customSettingsVisibility>
    <fields>
        <fullName>Perpetuate_In_Run__c</fullName>
        <label>Perpetuate In Run</label>
        <type>Checkbox</type>
        <defaultValue>false</defaultValue>
    </fields>
    <fields>
        <fullName>Perpetuate_In_Finish__c</fullName>
        <label>Perpetuate In Finish</label>
        <type>Checkbox</type>
        <defaultValue>false</defaultValue>
    </fields>
    <fields>
        <fullName>Drastic_Measures__c</fullName>
        <label>Drastic Measures</label>
        <type>Checkbox</type>
        <defaultValue>false</defaultValue>
    </fields>
    <fields>
        <fullName>Wait_Minutes__c</fullName>
        <label>Wait Minutes</label>
        <type>Number</type>
        <precision>6</precision>
        <scale>0</scale>
    </fields>
</CustomObject>